man/dpkg-trigger.1: Set program names in bold

--- a/debian/changelog
+++ b/debian/changelog
@@ -34,6 +34,7 @@ dpkg (1.15.0) UNRELEASED; urgency=low
   * Improve comment on BUGS section in dpkg-deb.1 about lack of authentication
     and checksum support in .deb files. Closes: #492052
   * Use a troff special character for the copyright symbol on man pages.
+  * Mark program names in dpkg-trigger.1 in bold.
 
   [ Raphael Hertzog ]
   * Enhance dpkg-shlibdeps's error message when a library can't be found to
