--- a/man/dpkg-trigger.1
+++ b/man/dpkg-trigger.1
@@ -1,4 +1,4 @@
-.TH dpkg\-trigger 1 "2008-04-08" "Debian Project" "dpkg suite"
+.TH dpkg\-trigger 1 "2008-08-18" "Debian Project" "dpkg suite"
 .SH NAME
 dpkg\-trigger \- a package trigger utility
 .
@@ -17,17 +17,17 @@ This can be used by maintainer scripts in complex and conditional
 situations where the file triggers, or the declarative \fBactivate\fP
 triggers control file directive, are insufficiently rich. It can also
 be used for testing and by system administrators (but note that the
-triggers won't actually be run by dpkg-trigger).
+triggers won't actually be run by \fBdpkg\-trigger\fP).
 .PP
-Unrecognised trigger name syntaxes are an error for dpkg-trigger.
+Unrecognised trigger name syntaxes are an error for \fBdpkg\-trigger\fP.
 .
 .SH COMMANDS
 .TP
 .BR \-\-check\-supported
-Check if the running dpkg supports triggers (usually called from a postinst).
-Will exit 0 if a triggers-capable dpkg has run, or 1 with an error message
-to stderr if not. Normally, however, it is better just to activate the
-desired trigger with \fBdpkg\-trigger\fP.
+Check if the running \fBdpkg\fP supports triggers (usually called from a
+postinst). Will exit 0 if a triggers-capable \fBdpkg\fP has run, or 1 with
+an error message to stderr if not. Normally, however, it is better just to
+activate the desired trigger with \fBdpkg\-trigger\fP.
 .TP
 .BR \-h ", " \-\-help
 Show the usage message and exit.
@@ -45,7 +45,7 @@ Change the location of the \fBdpkg\fR database. The default location is
 \fI/var/lib/dpkg\fP.
 .TP
 .BR \-\-by\-package=\fIpackage\fR
-Override trigger awaiter (normally set by dpkg through the
+Override trigger awaiter (normally set by \fBdpkg\fP through the
 DPKG_MAINTSCRIPT_PACKAGE environment variable of the maintainer scripts,
 naming the package to which the script belongs, and this will be used
 by default).
