--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2008-08-18  Guillem Jover  <guillem@debian.org>
 
+	* lib/dpkg.h (ARCHBINFMT): Remove unused macro.
+
+2008-08-18  Guillem Jover  <guillem@debian.org>
+
 	* src/query.c: Remove left-over description from header comment.
 	* src/remove.c: Remove partial change log from header comment.
 
