update Japanese translation

--- a/po/ja.po
+++ b/po/ja.po
@@ -2780,7 +2780,7 @@ msgstr "--%s に対する不正な整数です: `%.250s'"
 
 #: src/main.c:302
 msgid "<package status and progress file descriptor>"
-msgstr ""
+msgstr "<パッケージ状態と進捗ファイルデスクリプタ>"
 
 #: src/main.c:322
 #, c-format
