Slovak translation update

--- a/po/sk.po
+++ b/po/sk.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: dpkg 1.13\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2008-08-17 18:05+0300\n"
-"PO-Revision-Date: 2008-07-02 01:39+0100\n"
+"PO-Revision-Date: 2008-08-18 08:10+0100\n"
 "Last-Translator: Ivan Masár <helix84@centrum.sk>\n"
 "Language-Team: Slovak <sk-i18n@lists.linux.sk>\n"
 "MIME-Version: 1.0\n"
@@ -2767,7 +2767,7 @@ msgstr "neplatné číslo pre --%s: „%.250s“"
 
 #: src/main.c:302
 msgid "<package status and progress file descriptor>"
-msgstr ""
+msgstr "<popisovač súboru stavu balíka a priebehu>"
 
 #: src/main.c:322
 #, c-format
