--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-08-18  Ivan Masár  <helix84@centrum.sk>
+
+	* sk.po: Updated to 985t.
+
 2008-08-17  Guillem Jover  <guillem@debian.org>
 
 	* dpkg.pot: Regenerated.
