French translation update

--- a/po/fr.po
+++ b/po/fr.po
@@ -1,4 +1,4 @@
-# translation of dpkg.po to French
+# translation of fr.po to French
 # Dpkg --- the Debian GNU/Linux package maintenance system.
 #
 # Copyright (C) 1994,1995,1996 Ian Jackson <ian@chiark.greenend.org.uk>
@@ -22,10 +22,10 @@
 # Florent USSEIL <swiip81@free.fr>, 2008.
 msgid ""
 msgstr ""
-"Project-Id-Version: \n"
+"Project-Id-Version: fr\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2008-08-17 18:05+0300\n"
-"PO-Revision-Date: 2008-07-26 08:04+0200\n"
+"PO-Revision-Date: 2008-08-18 12:37+0200\n"
 "Last-Translator: Christian Perrier <bubulle@debian.org>\n"
 "Language-Team: French <debian-l10n-french@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -2934,7 +2934,7 @@ msgstr "entier incorrect pour --%s « %.250s »"
 
 #: src/main.c:302
 msgid "<package status and progress file descriptor>"
-msgstr ""
+msgstr "<descripteur de fichier d'état de paquet et de progression>"
 
 #: src/main.c:322
 #, c-format
