--- a/debian/changelog
+++ b/debian/changelog
@@ -40,16 +40,16 @@ dpkg (1.14.21) UNRELEASED; urgency=low
   * Basque (Piarres Beobide). Closes: #490905
   * Korean (Changwoo Ryu).
   * Thai (Theppitak Karoonboonyanan). Closes: #488090
-  * Romanian (Eddy Petrișor).
+  * Romanian (Eddy Petri?or).
   * Russian (Yuri Kozlov). Closes: #488689
-  * Slovak (Ivan Masár). Closes: #488903
+  * Slovak (Ivan Masár). Closes: #488903, #495505
   * French (Christian Perrier).
 
   [ Added dpkg translations ]
   * Lithuanian (Gintautas Miliauskas). Closes: #493326
 
   [ Updated dselect translations ]
-  * Romanian (Eddy Petrișor).
+  * Romanian (Eddy Petri?or).
 
  -- Raphael Hertzog <hertzog@debian.org>  Wed, 18 Jun 2008 10:19:51 +0200
 
