Update German man page and scripts translation

--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,7 @@
+2008-08-18  Helge Kreutzmann  <debian@helgefjell.de>
+
+	* po/de.po: Updated to 1595t0f6u.
+
 2008-08-17  Guillem Jover  <guillem@debian.org>
 
 	* po/dpkg-man.pot: Regenerated.
