--- a/debian/changelog
+++ b/debian/changelog
@@ -38,12 +38,13 @@ dpkg (1.14.21) UNRELEASED; urgency=low
 
   [ Updated dpkg translations ]
   * Basque (Piarres Beobide). Closes: #490905
+  * French (Christian Perrier).
+  * German (Sven Joachim).
   * Korean (Changwoo Ryu).
-  * Thai (Theppitak Karoonboonyanan). Closes: #488090
   * Romanian (Eddy Petrișor).
   * Russian (Yuri Kozlov). Closes: #488689
   * Slovak (Ivan Masár). Closes: #488903, #495505
-  * French (Christian Perrier).
+  * Thai (Theppitak Karoonboonyanan). Closes: #488090
 
   [ Added dpkg translations ]
   * Lithuanian (Gintautas Miliauskas). Closes: #493326
