--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-08-18  Sven Joachim  <svenjoac@gmx.de>
+
+	* de.po: Updated to 985t.
+
 2008-08-18  Christian Perrier  <bubulle@debian.org>
 
 	* fr.po: Updated to 985t.
