--- a/po/de.po
+++ b/po/de.po
@@ -8,10 +8,10 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Debian dpkg 1.14.20~\n"
+"Project-Id-Version: Debian dpkg 1.14.21\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2008-08-17 18:05+0300\n"
-"PO-Revision-Date: 2008-05-13 15:59+0200\n"
+"PO-Revision-Date: 2008-08-18 23:17+0200\n"
 "Last-Translator: Sven Joachim <svenjoac@gmx.de>\n"
 "Language-Team: German <debian-l10n-german@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -2775,7 +2775,7 @@ msgstr "ungültige Ganzzahl für --%s: »%.250s«"
 
 #: src/main.c:302
 msgid "<package status and progress file descriptor>"
-msgstr ""
+msgstr "<Dateideskriptor für Paketstatus und Fortschritt>"
 
 #: src/main.c:322
 #, c-format
