--- a/po/ro.po
+++ b/po/ro.po
@@ -21,7 +21,7 @@ msgstr ""
 "Project-Id-Version: ro\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2008-08-17 18:05+0300\n"
-"PO-Revision-Date: 2008-06-28 18:35+0300\n"
+"PO-Revision-Date: 2008-08-20 02:02+0300\n"
 "Last-Translator: Eddy Petrișor <eddy.petrisor@gmail.com>\n"
 "Language-Team: Romanian <debian-l10n-romanian@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -2852,7 +2852,7 @@ msgstr "întreg nevalid pentru --%s: „%.250s”"
 
 #: src/main.c:302
 msgid "<package status and progress file descriptor>"
-msgstr ""
+msgstr "<starea pachetului și descriptorul fișierului de progres>"
 
 #: src/main.c:322
 #, c-format
