French translation update (manual pages)
* po/fr.po: Updated to 1601t. Replaced "déclenchement" with
"action différée" everywhere. Fixed many related translations.

--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,8 @@
+2008-08-22  Raphael Hertzog  <hertzog@debian.org>
+
+	* po/fr.po: Updated to 1601t. Replaced "déclenchement" with
+	"action différée" everywhere. Fixed many related translations.
+
 2008-08-18  Helge Kreutzmann  <debian@helgefjell.de>
 
 	* po/de.po: Updated to 1595t0f6u.
