--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-08-22  Raphael Hertzog  <hertzog@debian.org>
+
+	* man/dpkg-source.1: Clarify two points concerning the behaviour
+	of the new 3.0 (quilt) source format.
+
 2008-08-18  Guillem Jover  <guillem@debian.org>
 
 	* lib/dpkg.h (ARCHBINFMT): Remove unused macro.
