libdpkg: Conditionalize stddef.h inclusion on HAVE_STDDEF_H

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2008-08-24  Guillem Jover  <guillem@debian.org>
 
+	* lib/dpkg-priv.h [HAVE_STDDEF_H]: Conditionalize <stddef.h> inclusion.
+
+2008-08-24  Guillem Jover  <guillem@debian.org>
+
 	* lib/dpkg-def.h (DPKG_BEGIN_DECLS, DPKG_END_DECLS): New macros.
 	* lib/dpkg.h: Surround declarations with DPKG_BEGIN_DECLS and
 	DPKG_END_DECLS.
