Czech translation update

--- a/po/cs.po
+++ b/po/cs.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: dpkg\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2008-08-17 18:05+0300\n"
-"PO-Revision-Date: 2008-05-18 15:34+0200\n"
+"PO-Revision-Date: 2008-08-24 09:11+0200\n"
 "Last-Translator: Miroslav Kure <kurem@debian.cz>\n"
 "Language-Team: Czech <debian-l10n-czech@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -2720,7 +2720,7 @@ msgstr "neplatné číslo pro --%s: `%.250s'"
 
 #: src/main.c:302
 msgid "<package status and progress file descriptor>"
-msgstr ""
+msgstr "<popisovač souboru stavu balíku a ukazatele postupu>"
 
 #: src/main.c:322
 #, c-format
