--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-08-24  Miroslav Kure  <kurem@debian.cz>
+
+	* cs.po: Updated to 985t.
+
 2008-08-20  Eddy Petrișor <eddy.petrisor@gmail.com>
 
 	* ro.po: Updated to 985t.
