Update Simplified Chinese programs translation

--- a/debian/changelog
+++ b/debian/changelog
@@ -44,6 +44,7 @@ dpkg (1.14.21) UNRELEASED; urgency=low
   * Korean (Changwoo Ryu).
   * Romanian (Eddy Petrișor).
   * Russian (Yuri Kozlov). Closes: #488689
+  * Simplified Chinese (Deng Xiyue). Closes: #496176
   * Slovak (Ivan Masár). Closes: #488903, #495505
   * Thai (Theppitak Karoonboonyanan). Closes: #488090
 
