dpkg(1): Escape hyphen in apt-get command

--- a/man/dpkg.1
+++ b/man/dpkg.1
@@ -641,7 +641,7 @@ with:
 Note that this will not actually install or remove anything, but just
 set the selection state on the requested packages. You will need some
 other application to actually download and install the requested
-packages. For example, run \fBapt\-get dselect-upgrade\fP.
+packages. For example, run \fBapt\-get dselect\-upgrade\fP.
 
 Ordinarily, you will find that \fBdselect\fP(1) provides a more
 convenient way to modify the package selection states.
