--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-dpkg (1.14.21) UNRELEASED; urgency=low
+dpkg (1.14.21) unstable; urgency=low
 
   [ Raphael Hertzog ]
   * Small fix in "3.0 (quilt)" source format when using non-standard name
@@ -54,7 +54,7 @@ dpkg (1.14.21) UNRELEASED; urgency=low
   [ Updated dselect translations ]
   * Romanian (Eddy Petrișor).
 
- -- Raphael Hertzog <hertzog@debian.org>  Wed, 18 Jun 2008 10:19:51 +0200
+ -- Guillem Jover <guillem@debian.org>  Tue, 26 Aug 2008 05:32:39 +0300
 
 dpkg (1.14.20) unstable; urgency=low
 
