--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2008-08-26  Guillem Jover  <guillem@debian.org>
 
+	* configure.ac: Bump version to 1.14.22~.
+
+2008-08-26  Guillem Jover  <guillem@debian.org>
+
 	* configure.ac: Release 1.14.21.
 
 2008-08-26  Guillem Jover  <guillem@debian.org>
