--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+dpkg (1.14.22) UNRELEASED; urgency=low
+
+  *
+
+ -- Guillem Jover <guillem@debian.org>  Tue, 26 Aug 2008 05:51:45 +0300
+
 dpkg (1.14.21) unstable; urgency=low
 
   [ Raphael Hertzog ]
