Updated Brazilian Portuguese translation of dpkg
	* po/pt_BR.po: Updated to 985t.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 dpkg (1.14.22) UNRELEASED; urgency=low
 
-  *
+  [ Updated dpkg translations ]
+  * Brazilian Portuguese (Felipe Augusto van de Wiel).
 
  -- Guillem Jover <guillem@debian.org>  Tue, 26 Aug 2008 05:51:45 +0300
 
