--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -13,7 +13,7 @@ msgstr ""
 "Project-Id-Version: dpkg 1.13\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2008-08-17 18:05+0300\n"
-"PO-Revision-Date: 2008-06-09 02:48-0300\n"
+"PO-Revision-Date: 2008-08-26 03:21-0300\n"
 "Last-Translator: Felipe Augusto van de Wiel (faw) <faw@debian.org>\n"
 "Language-Team: l10n portuguese <debian-l10n-portuguese@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -2791,7 +2791,7 @@ msgstr "inteiro inválido para --%s: '%.250s'"
 
 #: src/main.c:302
 msgid "<package status and progress file descriptor>"
-msgstr ""
+msgstr "<estado do pacote e progresso do descritor de arquivo>"
 
 #: src/main.c:322
 #, c-format
