--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-08-26  Felipe Augusto van de Wiel  <faw@debian.org>
+
+	* pt_BR.po: Updated to 985t.
+
 2008-08-26  Deng Xiyue  <manphiz-guest@users.alioth.debian.org>
 
 	* zh_CN.po: Updated to 985t.
