Move locale.h inclusion and locale setup to each program main

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,16 @@
 2008-09-14  Guillem Jover  <guillem@debian.org>
 
+	* lib/dpkg.h: Move <locale.h> inclusion and standard_startup locale
+	setup to ...
+	* dpkg-deb/main.c (main): ... here.
+	* dpkg-split/main.c (main): Likewise.
+	* dselect/main.cc (main): Likewise.
+	* src/main.c (main): Likewise.
+	* src/query.c (main): Likewise.
+	* src/trigcmd.c (main): Likewise.
+
+2008-09-14  Guillem Jover  <guillem@debian.org>
+
 	* lib/Makefile.am (libdpkg_a_SOURCES): Add 'dpkg-i18n.h'.
 	* lib/dpkg.h: Move <gettext.h> inclusion and ...
 	(_, N_): ... macros to ...
