--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,82 @@
 2008-09-14  Guillem Jover  <guillem@debian.org>
 
+	* libcompat/compat.h: New file.
+	* dpkg-deb/build.c: Include <compat.h>.
+	* dpkg-deb/extract.c: Likewise.
+	* dpkg-deb/info.c: Likewise.
+	* dpkg-deb/main.c: Likewise.
+	* dpkg-split/info.c: Likewise.
+	* dpkg-split/join.c: Likewise.
+	* dpkg-split/main.c: Likewise.
+	* dpkg-split/queue.c: Likewise.
+	* dpkg-split/split.c: Likewise.
+	* dselect/basecmds.cc: Likewise.
+	* dselect/baselist.cc: Likewise.
+	* dselect/basetop.cc: Likewise.
+	* dselect/bindings.cc: Likewise.
+	* dselect/curkeys.cc: Likewise.
+	* dselect/helpmsgs.cc: Likewise.
+	* dselect/main.cc: Likewise.
+	* dselect/methkeys.cc: Likewise.
+	* dselect/methlist.cc: Likewise.
+	* dselect/method.cc: Likewise.
+	* dselect/methparse.cc: Likewise.
+	* dselect/pkgcmds.cc: Likewise.
+	* dselect/pkgdepcon.cc: Likewise.
+	* dselect/pkgdisplay.cc: Likewise.
+	* dselect/pkginfo.cc: Likewise.
+	* dselect/pkgkeys.cc: Likewise.
+	* dselect/pkglist.cc: Likewise.
+	* dselect/pkgsublist.cc: Likewise.
+	* dselect/pkgtop.cc: Likewise.
+	* lib/cleanup.c: Likewise.
+	* lib/compression.c: Likewise.
+	* lib/database.c: Likewise.
+	* lib/dbmodify.c: Likewise.
+	* lib/dump.c: Likewise.
+	* lib/ehandle.c: Likewise.
+	* lib/lock.c: Likewise.
+	* lib/log.c: Likewise.
+	* lib/md5.c: Likewise.
+	* lib/mlib.c: Likewise.
+	* lib/myopt-util.c: Likewise.
+	* lib/myopt.c: Likewise.
+	* lib/nfmalloc.c: Likewise.
+	* lib/parse.c: Likewise.
+	* lib/parsehelp.c: Likewise.
+	* lib/path.c: Likewise.
+	* lib/showpkg.c: Likewise.
+	* lib/string.c: Likewise.
+	* lib/subproc.c: Likewise.
+	* lib/triglib.c: Likewise.
+	* lib/utils.c: Likewise.
+	* lib/varbuf.c: Likewise.
+	* lib/vercmp.c: Likewise.
+	* src/archives.c: Likewise.
+	* src/cleanup.c: Likewise.
+	* src/configure.c: Likewise.
+	* src/depcon.c: Likewise.
+	* src/enquiry.c: Likewise.
+	* src/errors.c: Likewise.
+	* src/filesdb.c: Likewise.
+	* src/help.c: Likewise.
+	* src/main.c: Likewise.
+	* src/packages.c: Likewise.
+	* src/pkg-list.c: Likewise.
+	* src/pkg-show.c: Likewise.
+	* src/processarc.c: Likewise.
+	* src/query.c: Likewise.
+	* src/remove.c: Likewise.
+	* src/select.c: Likewise.
+	* src/trigcmd.c: Likewise.
+	* src/trigproc.c: Likewise.
+	* src/update.c: Likewise.
+	* lib/fields.c: Likewise. Do not include "strnlen.h", now implicitly
+	included by <compat.h>.
+	* lib/tarfn.c: Likewise.
+
+2008-09-14  Guillem Jover  <guillem@debian.org>
+
 	* lib/dpkg.h: Move <locale.h> inclusion and standard_startup locale
 	setup to ...
 	* dpkg-deb/main.c (main): ... here.
