Reduce header includes by removing unused ones

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,21 @@
 2008-09-14  Guillem Jover  <guillem@debian.org>
 
+	* dselect/methkeys.cc: Remove unused headers <stdio.h>, <string.h>,
+	<assert.h> and <dpkg.h>.
+	* dselect/pkgkeys.cc: Likewise.
+	* dselect/basetop.cc: Likewise. Remove unused header <ctype.h>.
+	* dselect/curkeys.cc: Remove unused header <dpkg.h>.
+	* dselect/helpmsgs.h: Likewise.
+	* dselect/pkgcmds.cc: Likewise.
+	* dselect/pkgdisplay.cc: Likewise.
+	* dselect/pkginfo.cc: Likewise.
+	* lib/compression.c: Likewise.
+	* lib/dpkg-db.h: Remove unused header <string.h>. Include
+	<sys/types.h>.
+	* lib/md5.c: Remove unused header <netinet/in.h>.
+
+2008-09-14  Guillem Jover  <guillem@debian.org>
+
 	* src/main.c (commandfd): Remove left over debug printf.
 
 2008-09-14  Guillem Jover  <guillem@debian.org>
