--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2008-09-14  Guillem Jover  <guillem@debian.org>
+
+	* dselect/baselist.cc (baselist::startdisplay): Unmark debug message
+	for translation.
+	* dselect/methlist.cc (methodlist::display): Likewise.
+	* dselect/pkgdepcon.cc (packagelist::resolvedepcon): Likewise.
+	* dselect/pkglist.cc (packagelist::addheading): Likewise.
+	* dselect/pkgsublist.cc (packagelist::add): Likewise.
+
 2008-09-05  Raphael Hertzog  <hertzog@debian.org>
 
 	* configure.ac: Release 1.14.22.
