--- a/debian/changelog
+++ b/debian/changelog
@@ -35,6 +35,7 @@ dpkg (1.15.0) UNRELEASED; urgency=low
     and checksum support in .deb files. Closes: #492052
   * Use a troff special character for the copyright symbol on man pages.
   * Mark program names in dpkg-trigger.1 in bold.
+  * Unmark dselect debug messages for translation.
 
   [ Raphael Hertzog ]
   * Enhance dpkg-shlibdeps's error message when a library can't be found to
