libdpkg: Do not pass any argument to standard_shutdown

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2008-09-14  Guillem Jover  <guillem@debian.org>
 
+	* lib/dpkg.h (standard_shutdown): Remove unused freemem argument,
+	and do not call nffreeall. Fix all callers.
+
+2008-09-14  Guillem Jover  <guillem@debian.org>
+
 	* lib/dpkg-db.h: Move <stdlib.h> inclusion to ...
 	* dselect/pkglist.cc: ... here.
 	* lib/database.c: Likewise.
