--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,11 @@
 dpkg (1.14.22) UNRELEASED; urgency=low
 
+  [ Raphael Hertzog ]
+  * The last "small fix" actually broke conversion of source packages to
+    "3.0 (quilt)" format when they have local changes and no pre-existing
+    quilt series file. Now always provide a valid name in QUILT_SERIES.
+    Closes: #496920
+
   [ Updated dpkg translations ]
   * Brazilian Portuguese (Felipe Augusto van de Wiel).
 
