dpkg-source/2.0 and 3.0 (quilt): fix perms of automatic patch
* scripts/Dpkg/Source/Package/V2.pm (do_build): Change permissions
of the automatically generated patch which is initially created
0600 with tempfile().

--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,9 @@
 	quilt command might create it). Up to now
 	File::Spec->rel2abs(undef) returned the name of the current
 	directory and we improperly used that as value of QUILT_SERIES.
+	* scripts/Dpkg/Source/Package/V2.pm (do_build): Change permissions
+	of the automatically generated patch which is initially created
+	0600 with tempfile().
 
 2008-08-26  Guillem Jover  <guillem@debian.org>
 
