dpkg-gensymbols: skip directories accessed through a symlink
* scripts/dpkg-gensymbols.pl: It was already skipping symlinks
within the package build tree. Now it also skips real
directories accessed through a symlink contained in the package
build tree. Package like libc6-386 had symlinks usr/lib32
pointing to some directories outside of the build tree and
the LD_LIBRARY_PATH set by fakeroot led contained
/usr/lib32/libfakeroot which made dpkg-gensymbols scan this
directory and add libfakeroot to the libc6-386 symbols file!

--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,10 @@ dpkg (1.14.22) UNRELEASED; urgency=low
   * Fix permissions of the automatically generated pacth in "2.0" and "3.0
     (quilt)" format. They were improperly set to 0600 due to tempfile()
     and were not reset to a sane value. Closes: #496925
+  * Fix dpkg-gensymbols to not scan (real) directories accessed through a
+    symlink contained in the build tree as they may well not be part of
+    the package (with absolute symlinks). It was already skipping symlinks
+    (since 1.14.16.6) for similar reasons.
 
   [ Updated dpkg translations ]
   * Brazilian Portuguese (Felipe Augusto van de Wiel).
