--- a/debian/changelog
+++ b/debian/changelog
@@ -15,6 +15,7 @@ dpkg (1.14.22) UNRELEASED; urgency=low
 
   [ Updated dpkg translations ]
   * Brazilian Portuguese (Felipe Augusto van de Wiel).
+  * Swedish (Daniel Nylander).
 
  -- Guillem Jover <guillem@debian.org>  Tue, 26 Aug 2008 05:51:45 +0300
 
