--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-08-29  Daniel Nylander <po@danielnylander.se>
+
+	* sv.po: Updated to 985t.
+
 2008-08-26  Felipe Augusto van de Wiel  <faw@debian.org>
 
 	* pt_BR.po: Updated to 985t.
