--- a/po/sv.po
+++ b/po/sv.po
@@ -8,8 +8,8 @@ msgstr ""
 "Project-Id-Version: dpkg 1.14.15\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2008-08-17 18:05+0300\n"
-"PO-Revision-Date: 2008-05-13 09:26+0100\n"
-"Last-Translator: Peter Karlsson <peterk@debian.org>\n"
+"PO-Revision-Date: 2008-08-29 11:50+0100\n"
+"Last-Translator: Daniel Nylander <po@danielnylander.se>\n"
 "Language-Team: Swedish <debian-l10n-swedish@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
@@ -1871,12 +1871,12 @@ msgstr "kunde inte kontrollera om \"%.250s\" existerar"
 #: src/depcon.c:156
 #, c-format
 msgid "%s depends on %s"
-msgstr "%s beror på %s"
+msgstr "%s är beroende av %s"
 
 #: src/depcon.c:159
 #, c-format
 msgid "%s pre-depends on %s"
-msgstr "%s beror i förväg på %s"
+msgstr "%s är i förväg beroende av %s"
 
 #: src/depcon.c:162
 #, c-format
@@ -1993,9 +1993,9 @@ msgid ""
 "installation.  They must be reinstalled for them (and any packages\n"
 "that depend on them) to function properly:\n"
 msgstr ""
-"Följande paket är i oordning på grund av grava problem när de\n"
-"installerades. De måste ominstalleras om de (och paket som beror på\n"
-"dem) ska fungera korrekt:\n"
+"Följande paket är i oordning på grund av allvarliga problem när de\n"
+"installerades. De måste ominstalleras om de (och paket som är\n"
+"beroende av dem) ska fungera korrekt:\n"
 
 #: src/enquiry.c:86
 msgid ""
@@ -2732,7 +2732,7 @@ msgstr "ogiltigt heltal för --%s: \"%.250s\""
 
 #: src/main.c:302
 msgid "<package status and progress file descriptor>"
-msgstr ""
+msgstr "<paketstatus och förloppsfilbeskrivare>"
 
 #: src/main.c:322
 #, c-format
@@ -2962,7 +2962,7 @@ msgstr "  Versionen av %s som skall konfigureras är %s.\n"
 
 #: src/packages.c:585
 msgid " depends on "
-msgstr " beror på "
+msgstr " är beroende av "
 
 #: src/packages.c:591
 msgid "; however:\n"
