Updated Swedish translation.
Fixed wording in main dpkg translation.
Updated manual pages translation to 1601t0f0u.
Updated scripts translation to 473t0f0u.

Updated my surname in the updated translations.

--- a/debian/changelog
+++ b/debian/changelog
@@ -15,7 +15,13 @@ dpkg (1.14.22) UNRELEASED; urgency=low
 
   [ Updated dpkg translations ]
   * Brazilian Portuguese (Felipe Augusto van de Wiel).
-  * Swedish (Daniel Nylander).
+  * Swedish (Daniel Nylander and Peter Krefting).
+
+  [ Updated manpages translations ]
+  * Swedish (Peter Krefting).
+
+  [ Updated scripts translations ]
+  * Swedish (Peter Krefting).
 
  -- Guillem Jover <guillem@debian.org>  Tue, 26 Aug 2008 05:51:45 +0300
 
