--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,8 @@
+2008-06-04  Peter Krefting  <peterk@debian.org>
+
+	* po/sv.po: Updated to 1601t.
+	* po/sv.add: Updated my surname.
+
 2008-08-22  Raphael Hertzog  <hertzog@debian.org>
 
 	* po/fr.po: Updated to 1601t. Replaced "déclenchement" with
