--- a/po/sv.po
+++ b/po/sv.po
@@ -1,7 +1,7 @@
 # Swedish translation of dpkg
 # Copyright 1999-2008 Software in the Public Interest
-# Peter Karlsson <peterk@debian.org>, 1999-2008.
-# Daniel Nylander <po@danielnylander.se>, 2006.
+# Peter Krefting <peterk@debian.org>, 1999-2008.
+# Daniel Nylander <po@danielnylander.se>, 2006, 2008.
 #
 msgid ""
 msgstr ""
@@ -9,7 +9,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2008-08-17 18:05+0300\n"
 "PO-Revision-Date: 2008-08-29 11:50+0100\n"
-"Last-Translator: Daniel Nylander <po@danielnylander.se>\n"
+"Last-Translator: Daniel Krefting <peterk@debian.org>\n"
 "Language-Team: Swedish <debian-l10n-swedish@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
@@ -2732,7 +2732,7 @@ msgstr "ogiltigt heltal för --%s: \"%.250s\""
 
 #: src/main.c:302
 msgid "<package status and progress file descriptor>"
-msgstr "<paketstatus och förloppsfilbeskrivare>"
+msgstr "<filhandtag för paketstatus och förlopp>"
 
 #: src/main.c:322
 #, c-format
