--- a/scripts/po/ChangeLog
+++ b/scripts/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-08-29  Peter Krefting  <peterk@debian.org>
+
+	* sv.po: Updated to 473t.
+
 2008-08-18  Helge Kreutzmann  <debian@helgefjell.de>
 
 	* de.po: Updated to 473t.
