--- a/scripts/po/sv.po
+++ b/scripts/po/sv.po
@@ -1,19 +1,19 @@
 # Copyright (C) 2007-2008 Software in the Public Interest, Inc.
 # This file is distributed under the same license as the dpkg package.
-# Peter Karlsson <peterk@debian.org>, 2007-2008.
+# Peter Krefting <peterk@debian.org>, 2007-2008.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: dpkg 1.14.15\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2008-08-17 18:08+0300\n"
-"PO-Revision-Date: 2008-06-09 14:22+0100\n"
-"Last-Translator: Peter Karlsson <peterk@debian.org>\n"
+"PO-Revision-Date: 2008-08-29 17:49+0100\n"
+"Last-Translator: Peter Krefting <peterk@debian.org>\n"
 "Language-Team: Swedish <debian-l10n-swedish@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=n!=1;\n"
+"Plural-Forms: nplurals=2; plural=n!=1;"
 
 #: scripts/822-date.pl:12
 msgid "Usage: 822-date"
@@ -155,7 +155,7 @@ msgstr ""
 "Copyright © 2007 Frank Lichtenheld."
 
 #: scripts/dpkg-buildpackage.pl:36
-#, fuzzy, perl-format
+#, perl-format
 msgid ""
 "\n"
 "Usage: %s [<options> ...]\n"
@@ -234,7 +234,7 @@ msgstr ""
 "  -e<ansvarig>   ansvarig för utgivningen är <maint>.  } sänds bara\n"
 "  -C<ändrfil>    ändringar beskrivs i <ändrfil>.       } till dpkg-"
 "genchanges\n"
-"  -si (standard) källk. innehåller orig. för rev. 0/1. }\n"
+"  -si (standard) källk. innehåller orig. för ny uppstr.}\n"
 "  -sa            insänd källkod innehåller alltid orig.}\n"
 "  -sd            insänd källkod är endast diff och .dsc}\n"
 "  -sn            tvinga Debianeget källkodsformat.       }\n"
