Updated Galician translation of dpkg

--- a/debian/changelog
+++ b/debian/changelog
@@ -15,6 +15,7 @@ dpkg (1.14.22) UNRELEASED; urgency=low
 
   [ Updated dpkg translations ]
   * Brazilian Portuguese (Felipe Augusto van de Wiel).
+  * Galician (Jacobo Tarrio).
   * Swedish (Daniel Nylander and Peter Krefting).
 
   [ Updated manpages translations ]
