Basque translation update

--- a/debian/changelog
+++ b/debian/changelog
@@ -14,6 +14,7 @@ dpkg (1.14.22) UNRELEASED; urgency=low
     (since 1.14.16.6) for similar reasons.
 
   [ Updated dpkg translations ]
+  * Basque (Piarres Beobide). Closes: #496753
   * Brazilian Portuguese (Felipe Augusto van de Wiel).
   * Galician (Jacobo Tarrio).
   * Swedish (Daniel Nylander and Peter Krefting).
