--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-09-05  Piarres Beobide  <pi+debian@beobide.net>
+
+	* eu.po: Updated to 985t.
+
 2008-08-29  Jacobo Tarrio <jtarrio@debian.org>
 
 	* gl.po: Updated to 985t.
