--- a/po/eu.po
+++ b/po/eu.po
@@ -9,14 +9,14 @@ msgstr ""
 "Project-Id-Version: dpkg_po_eu\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2008-08-17 18:05+0300\n"
-"PO-Revision-Date: 2008-07-15 09:47+0200\n"
+"PO-Revision-Date: 2008-08-27 10:10+0200\n"
 "Last-Translator: Piarres Beobide <pi@beobide.net>\n"
 "Language-Team: Euskara <debian-l10n-basque@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Pootle 1.1.0\n"
+"X-Generator: KBabel 1.11.4\n"
 
 #: lib/compat.c:46
 msgid "unable to open tmpfile for vsnprintf"
@@ -135,8 +135,7 @@ msgstr ""
 
 #: lib/dbmodify.c:64
 #, c-format
-msgid ""
-"updates directory contains files with different length names (both %d and %d)"
+msgid "updates directory contains files with different length names (both %d and %d)"
 msgstr ""
 "eguneratzeen direktorioak luzera desberdineko izenak dituzten fitxategiak "
 "dauzka (%d eta %d)"
@@ -390,8 +389,7 @@ msgstr "`conffiles' balioak `%.*s' lerroa gaizki formateatua dauka"
 #: lib/fields.c:266
 #, c-format
 msgid "value for `conffiles' has line starting with non-space `%c'"
-msgstr ""
-"`conffiles' balioko lerroa zuriunea ez den `%c' karakterearekin hasten da"
+msgstr "`conffiles' balioko lerroa zuriunea ez den `%c' karakterearekin hasten da"
 
 #: lib/fields.c:282
 msgid "root or null directory is listed as a conffile"
@@ -399,10 +397,8 @@ msgstr "erro direktorioa edo direktorio baliogabea conffile gisa zerrendatu da"
 
 #: lib/fields.c:338
 #, c-format
-msgid ""
-"`%s' field, missing package name, or garbage where package name expected"
-msgstr ""
-"`%s' eremua, pakete izena falta, edo zaborra pakete izena espero zen lekuan"
+msgid "`%s' field, missing package name, or garbage where package name expected"
+msgstr "`%s' eremua, pakete izena falta, edo zaborra pakete izena espero zen lekuan"
 
 #: lib/fields.c:341
 #, c-format
@@ -722,8 +718,7 @@ msgstr "ezin da GPL fitxategia ireki "
 #: lib/parse.c:108
 #, c-format
 msgid "failed to open package info file `%.255s' for reading"
-msgstr ""
-"huts egin du `%.255s' paketearen informazio fitxategia irakurtzeko irekitzean"
+msgstr "huts egin du `%.255s' paketearen informazio fitxategia irakurtzeko irekitzean"
 
 #: lib/parse.c:113
 #, c-format
@@ -914,8 +909,7 @@ msgstr "Itxierako giltza falta da formatuan\n"
 #: lib/trigdeferred.l:62
 #, c-format
 msgid "invalid package name `%.250s' in triggers deferred file `%.250s'"
-msgstr ""
-"`%.250s' pakete izen baliogabea `%.250s' baztertutako abiarazle fitxategian"
+msgstr "`%.250s' pakete izen baliogabea `%.250s' baztertutako abiarazle fitxategian"
 
 #: lib/trigdeferred.l:71
 #, c-format
@@ -1026,8 +1020,7 @@ msgstr "ezin da `%.250s' abiarazle interes fitxategi berria instalatu"
 
 #: lib/triglib.c:467
 #, c-format
-msgid ""
-"duplicate file trigger interest for filename `%.250s' and package `%.250s'"
+msgid "duplicate file trigger interest for filename `%.250s' and package `%.250s'"
 msgstr ""
 "bikoizturiko fitxategi abiarazle interesa `%.250s' fitxategian eta`%.250s' "
 "paketean"
@@ -1195,8 +1188,7 @@ msgstr ""
 #: src/archives.c:457
 #, c-format
 msgid "unable to stat restored `%.255s' before installing another version"
-msgstr ""
-"ezin da atzitu leheneratutako `%.255s' beste bertsio bat instalatu aurretik"
+msgstr "ezin da atzitu leheneratutako `%.255s' beste bertsio bat instalatu aurretik"
 
 #: src/archives.c:492
 #, c-format
@@ -1215,8 +1207,7 @@ msgstr "Instalaturiko %s paketeak ordezturiko fitxategiak...\n"
 
 #: src/archives.c:561
 #, c-format
-msgid ""
-"trying to overwrite directory `%.250s' in package %.250s with nondirectory"
+msgid "trying to overwrite directory `%.250s' in package %.250s with nondirectory"
 msgstr ""
 "%2$.250s paketeko `%1$.250s' direktorioa direktorioa ez den batekin "
 "gainidazten saiatzen ari da"
@@ -1294,8 +1285,7 @@ msgstr "ezin da esteka sinbolikoaren babeskopiaren 'chown' egin: `%.255s'"
 #: src/archives.c:785
 #, c-format
 msgid "unable to make backup link of `%.255s' before installing new version"
-msgstr ""
-"bertsio berria instalatu aurretik ezin da estekaren babeskopia egin: `%.255s'"
+msgstr "bertsio berria instalatu aurretik ezin da estekaren babeskopia egin: `%.255s'"
 
 #: src/archives.c:810
 #, c-format
@@ -1350,8 +1340,7 @@ msgstr "%.250s instalatzea"
 
 #: src/archives.c:920
 #, c-format
-msgid ""
-"dpkg: considering deconfiguration of %s, which would be broken by %s ...\n"
+msgid "dpkg: considering deconfiguration of %s, which would be broken by %s ...\n"
 msgstr ""
 "dpkg: %s-ren konfigurazio kentzea kontutan hartzen, zein %s-ek apur "
 "dezake ... \n"
@@ -1373,8 +1362,7 @@ msgstr ""
 #: src/archives.c:939
 #, c-format
 msgid "dpkg: warning - ignoring breakage, may proceed anyway !\n"
-msgstr ""
-"dpkg: abisua - apurketari ez ikusi egin zaio, hala ere aurrera jarraitzen!\n"
+msgstr "dpkg: abisua - apurketari ez ikusi egin zaio, hala ere aurrera jarraitzen!\n"
 
 #: src/archives.c:945
 #, c-format
@@ -1500,8 +1488,7 @@ msgstr "%s - abisua: %.250s aurreko bertsiora itzultzen (%.250s -> %.250s).\n"
 #: src/archives.c:1276
 #, c-format
 msgid "Will not downgrade %.250s from version %.250s to %.250s, skipping.\n"
-msgstr ""
-"%.250s ez da aurreko bertsiora itzuliko (%.250s -> %.250s), saltatzen.\n"
+msgstr "%.250s ez da aurreko bertsiora itzuliko (%.250s -> %.250s), saltatzen.\n"
 
 #: src/cleanup.c:83
 #, c-format
@@ -1605,14 +1592,12 @@ msgstr ""
 #: src/configure.c:245
 #, c-format
 msgid "dpkg: %s: warning - failed to remove old backup `%.250s': %s\n"
-msgstr ""
-"dpkg: %s: abisua - huts egin du `%.250s' babeskopia zaharra kentzean : %s\n"
+msgstr "dpkg: %s: abisua - huts egin du `%.250s' babeskopia zaharra kentzean : %s\n"
 
 #: src/configure.c:254
 #, c-format
 msgid "dpkg: %s: warning - failed to rename `%.250s' to `%.250s': %s\n"
-msgstr ""
-"dpkg: %s: abisua - huts egin du `%.250s' -> `%.250s' izena aldatzean: %s\n"
+msgstr "dpkg: %s: abisua - huts egin du `%.250s' -> `%.250s' izena aldatzean: %s\n"
 
 #: src/configure.c:262
 #, c-format
@@ -1622,14 +1607,12 @@ msgstr "dpkg: %s: abisua - huts egin du `%.250s' kentzean: %s\n"
 #: src/configure.c:270
 #, c-format
 msgid "dpkg: %s: warning - failed to remove old distrib version `%.250s': %s\n"
-msgstr ""
-"dpkg: %s: abisua - huts egin du `%.250s' banaketa zaharra kentzean: %s\n"
+msgstr "dpkg: %s: abisua - huts egin du `%.250s' banaketa zaharra kentzean: %s\n"
 
 #: src/configure.c:275
 #, c-format
 msgid "dpkg: %s: warning - failed to remove `%.250s' (before overwrite): %s\n"
-msgstr ""
-"dpkg: %s: abisua - huts egin du `%.250s' kentzean (gainidatzi aurretik): %s\n"
+msgstr "dpkg: %s: abisua - huts egin du `%.250s' kentzean (gainidatzi aurretik): %s\n"
 
 #: src/configure.c:280
 #, c-format
@@ -1712,8 +1695,7 @@ msgstr "ezin da aldatu `%.250s' konfigurazio fitxategi berriaren jabetza"
 #: src/configure.c:448
 #, c-format
 msgid "unable to set mode of new dist conffile `%.250s'"
-msgstr ""
-"ezin da ezarri banaketa berriaren `%.250s' konfigurazio fitxategiaren modua"
+msgstr "ezin da ezarri banaketa berriaren `%.250s' konfigurazio fitxategiaren modua"
 
 #: src/configure.c:478
 #, c-format
@@ -2095,8 +2077,7 @@ msgstr ""
 #: src/enquiry.c:279
 #, c-format
 msgid "dpkg not recorded as installed, cannot check for epoch support !\n"
-msgstr ""
-"badirudi dpkg ez dagoela instalatuta, ezin da bilatu aroaren euskarria !\n"
+msgstr "badirudi dpkg ez dagoela instalatuta, ezin da bilatu aroaren euskarria !\n"
 
 #: src/enquiry.c:322
 msgid "--predep-package does not take any argument"
@@ -2114,16 +2095,14 @@ msgstr ""
 #: src/enquiry.c:376
 #, c-format
 msgid "cannot satisfy pre-dependencies for %.250s (wanted due to %.250s)"
-msgstr ""
-"%.250s: ezin dira aurremendekotasunak bete (hau dela eta behar dira: %.250s)"
+msgstr "%.250s: ezin dira aurremendekotasunak bete (hau dela eta behar dira: %.250s)"
 
 #: src/enquiry.c:394
 msgid "--print-architecture does not take any argument"
 msgstr "--print-architecture: ez du argumenturik hartzen"
 
 #: src/enquiry.c:436
-msgid ""
-"--compare-versions takes three arguments: <version> <relation> <version>"
+msgid "--compare-versions takes three arguments: <version> <relation> <version>"
 msgstr ""
 "--compare-versions: hiru argumentu hartzen ditu: <version> <relation> "
 "<version>"
@@ -2147,8 +2126,7 @@ msgstr ""
 " %s\n"
 
 #: src/errors.c:63
-msgid ""
-"dpkg: failed to allocate memory for new entry in list of failed packages."
+msgid "dpkg: failed to allocate memory for new entry in list of failed packages."
 msgstr ""
 "dpkg: ezin izan da memoriarik esleitu huts egindako paketeen zerrendan "
 "sarrera berria gehitzeko."
@@ -2173,8 +2151,7 @@ msgstr "%s paketea atxikitzeko zen, baina zuk eskatu bezala prozesatuko da\n"
 
 #: src/errors.c:98
 #, c-format
-msgid ""
-"Package %s is on hold, not touching it.  Use --force-hold to override.\n"
+msgid "Package %s is on hold, not touching it.  Use --force-hold to override.\n"
 msgstr ""
 "%s paketea atxikita dago, ez da ukituko.  Erabili --force-hold\n"
 "gainidazteko.\n"
@@ -2247,8 +2224,7 @@ msgstr "ezin da hustu %s paketearen fitxategi zerrendako eguneratua"
 #: src/filesdb.c:269
 #, c-format
 msgid "failed to sync updated files list file for package %s"
-msgstr ""
-"ezin da sinkronizatu %s paketearen fitxategi zerrendaren fitxategi eguneratua"
+msgstr "ezin da sinkronizatu %s paketearen fitxategi zerrendaren fitxategi eguneratua"
 
 #: src/filesdb.c:272
 #, c-format
@@ -2764,8 +2740,7 @@ msgstr "--debug: octal argumentu bat behar du"
 #: src/main.c:267
 #, c-format
 msgid "null package name in --ignore-depends comma-separated list `%.250s'"
-msgstr ""
-"pakete izen nulua --ignore-depends komaz bereizitako `%.250s' zerrendan"
+msgstr "pakete izen nulua --ignore-depends komaz bereizitako `%.250s' zerrendan"
 
 #: src/main.c:273
 #, c-format
@@ -2779,7 +2754,7 @@ msgstr "baliogabeko osokoa --%s: `%.250s'"
 
 #: src/main.c:302
 msgid "<package status and progress file descriptor>"
-msgstr ""
+msgstr "<pakete egoera eta aurrerapen fitxategi deskribatzailea>"
 
 #: src/main.c:322
 #, c-format
@@ -2917,8 +2892,7 @@ msgstr "--%s: pakete izenaren argumentu bat behar du gutxienez"
 msgid ""
 "you must specify packages by their own names, not by quoting the names of "
 "the files they come in"
-msgstr ""
-"paketeen izenak zehaztu behar dituzu, ez paketeen barruko fitxategien izenak"
+msgstr "paketeen izenak zehaztu behar dituzu, ez paketeen barruko fitxategien izenak"
 
 #: src/packages.c:188
 #, c-format
@@ -3119,8 +3093,7 @@ msgstr "%s (%s) deskonprimitzen...\n"
 #: src/processarc.c:323
 #, c-format
 msgid "name of conffile (starting `%.250s') is too long (>%d characters)"
-msgstr ""
-"konf. fitxategiaren izena (`%.250s' hasten dena) luzeegia da (>%d karaktere)"
+msgstr "konf. fitxategiaren izena (`%.250s' hasten dena) luzeegia da (>%d karaktere)"
 
 #: src/processarc.c:376
 #, c-format
@@ -3453,8 +3426,7 @@ msgstr ""
 
 #: src/remove.c:95
 #, c-format
-msgid ""
-"dpkg - warning: ignoring request to remove %.250s which isn't installed.\n"
+msgid "dpkg - warning: ignoring request to remove %.250s which isn't installed.\n"
 msgstr ""
 "dpkg - abisua: %.250s kentzeko eskaerari ez ikusi egingo zaio, ez dagoelako "
 "instalatuta.\n"
@@ -3809,8 +3781,7 @@ msgstr "ezin da begiratu `%.250s' artxiboa badagoen"
 
 #: dpkg-deb/build.c:221
 msgid "target is directory - cannot skip control file check"
-msgstr ""
-"helburua direktorioa da - ezin da saltatu kontrol fitxategiaren egiaztapena"
+msgstr "helburua direktorioa da - ezin da saltatu kontrol fitxategiaren egiaztapena"
 
 #: dpkg-deb/build.c:222
 #, c-format
@@ -3823,14 +3794,12 @@ msgstr ""
 
 #: dpkg-deb/build.c:240
 msgid "package name has characters that aren't lowercase alphanums or `-+.'"
-msgstr ""
-"pakete izenak minuskula alfanumerikoak edo `-+.' ez diren karaktereak dauzka"
+msgstr "pakete izenak minuskula alfanumerikoak edo `-+.' ez diren karaktereak dauzka"
 
 #: dpkg-deb/build.c:242
 #, c-format
 msgid "warning, `%s' contains user-defined Priority value `%s'\n"
-msgstr ""
-"abisua, `%s'(e)k erabiltzaileak definitutako `%s' lehentasun balioa dauka\n"
+msgstr "abisua, `%s'(e)k erabiltzaileak definitutako `%s' lehentasun balioa dauka\n"
 
 #: dpkg-deb/build.c:250
 #, c-format
@@ -3881,8 +3850,7 @@ msgstr "fgets: kate huts bat bidali du konfigurazio fitxategiak irakurtzean"
 
 #: dpkg-deb/build.c:304
 #, c-format
-msgid ""
-"warning, conffile name `%.50s...' is too long, or missing final newline\n"
+msgid "warning, conffile name `%.50s...' is too long, or missing final newline\n"
 msgstr ""
 "abisua, `%.50s...' konf. fitxategiaren izena luzeegia da, edo amaierako "
 "lerro-jauzia falta du\n"
@@ -4030,8 +3998,7 @@ msgstr "`%.250s' fitxategia hondatuta dago - kidearen %zi luzera negatiboa"
 #: dpkg-deb/extract.c:84 dpkg-split/info.c:43
 #, c-format
 msgid "file `%.250s' is corrupt - bad digit (code %d) in %s"
-msgstr ""
-"`%.250s' fitxategia hondatuta dago - okerreko digitua (%d kodea) %s(e)n"
+msgstr "`%.250s' fitxategia hondatuta dago - okerreko digitua (%d kodea) %s(e)n"
 
 #: dpkg-deb/extract.c:97
 msgid "failed getting the current file position"
@@ -4255,8 +4222,7 @@ msgstr "dpkg-deb: `%.255s': ez dauka `%.255s' kontrol-osagairik\n"
 #: dpkg-deb/info.c:114
 #, c-format
 msgid "open component `%.255s' (in %.255s) failed in an unexpected way"
-msgstr ""
-"huts egin du `%.255s' osagaia irekitzean (%.255s), espero ez zen moduan"
+msgstr "huts egin du `%.255s' osagaia irekitzean (%.255s), espero ez zen moduan"
 
 #: dpkg-deb/info.c:120
 msgid "One requested control component is missing"
@@ -4443,8 +4409,7 @@ msgstr "ezin da joan atzera"
 #: dpkg-split/info.c:105
 #, c-format
 msgid "file `%.250s' is corrupt - bad padding character (code %d)"
-msgstr ""
-"`%.250s' fitxategia hondatuta dago - okerreko karaktere betegarria (%d kodea)"
+msgstr "`%.250s' fitxategia hondatuta dago - okerreko karaktere betegarria (%d kodea)"
 
 #: dpkg-split/info.c:109
 #, c-format
@@ -4461,8 +4426,7 @@ msgstr ""
 #: dpkg-split/info.c:124
 #, c-format
 msgid "file `%.250s' is corrupt - bad MD5 checksum `%.250s'"
-msgstr ""
-"`%.250s' fitxategia hondatuta dago - okerreko MD5 kontrol batura: `%.250s'"
+msgstr "`%.250s' fitxategia hondatuta dago - okerreko MD5 kontrol batura: `%.250s'"
 
 #: dpkg-split/info.c:131
 #, c-format
@@ -5447,8 +5411,7 @@ msgstr "%s: huts %s %s-ra mugitzerakoan, uzten: %s"
 #: scripts/install-info.pl:288
 #, perl-format
 msgid "%s: no backup file %s available, retrieving default file."
-msgstr ""
-"%s: %s babeskopia fitxategia ez dago, lehenetsiriko fitxategia erabiltzen."
+msgstr "%s: %s babeskopia fitxategia ez dago, lehenetsiriko fitxategia erabiltzen."
 
 #: scripts/install-info.pl:297
 #, perl-format
@@ -5915,8 +5878,7 @@ msgstr ""
 
 #: scripts/update-alternatives.pl:650
 msgid "Press enter to keep the default[*], or type selection number: "
-msgstr ""
-"Enter sakatu lehenespena mantentzeko[*], edo hautatze zenbakia sakatu: "
+msgstr "Enter sakatu lehenespena mantentzeko[*], edo hautatze zenbakia sakatu: "
 
 #: scripts/update-alternatives.pl:682
 #, perl-format
@@ -5957,3 +5919,4 @@ msgstr "Ezin da %s %s bezala instalatu: %s"
 #, perl-format
 msgid "Serious problem: %s"
 msgstr "Arazo larria: %s"
+
