Updated Norwegian Bokmal translation.

--- a/debian/changelog
+++ b/debian/changelog
@@ -17,6 +17,7 @@ dpkg (1.14.22) UNRELEASED; urgency=low
   * Basque (Piarres Beobide). Closes: #496753
   * Brazilian Portuguese (Felipe Augusto van de Wiel).
   * Galician (Jacobo Tarrio).
+  * Norwegian Bokmal (Hans Fredrik Nordhaug). Closes: #497309
   * Swedish (Daniel Nylander and Peter Krefting).
 
   [ Updated manpages translations ]
