--- a/po/nb.po
+++ b/po/nb.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: dpkg\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2008-08-17 18:05+0300\n"
-"PO-Revision-Date: 2008-05-11 08:17+0200\n"
+"PO-Revision-Date: 2008-08-31 20:55+0200\n"
 "Last-Translator: Hans Fredrik Nordhaug <hans@nordhaug.priv.no>\n"
 "Language-Team: Norwegian Bokmål <i18n-nb@lister.ping.ui.no>\n"
 "MIME-Version: 1.0\n"
@@ -2739,10 +2739,10 @@ msgstr "ugyldig heltall for --%s: «%.250s»"
 
 #: src/main.c:302
 msgid "<package status and progress file descriptor>"
-msgstr ""
+msgstr "<pakkestatus og fremdriftsfilindikator>"
 
 #: src/main.c:322
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "%s forcing options - control behaviour when problems found:\n"
 "  warn but continue:  --force-<thing>,<thing>,...\n"
@@ -2805,6 +2805,7 @@ msgstr ""
 "                         standardinnstilling, blir du spurt med mindre du\n"
 "                         i tillegg har valgt «confold» eller «confnew».\n"
 "  confmiss [!]           Installer alltid oppsettsfiler som mangler\n"
+"  breaks [!]             Installer selvi om det vil ødelegge en annen pakke\n"
 "  conflicts [!]          Tillat installasjon av pakker som er i konflikt\n"
 "  architecture [!]       Håndter også pakker med feil arkitektur\n"
 "  overwrite-dir [!]      Skriv over kataloger fra en pakke med filer fra en "
