--- a/debian/changelog
+++ b/debian/changelog
@@ -19,6 +19,7 @@ dpkg (1.14.22) UNRELEASED; urgency=low
   * Galician (Jacobo Tarrio).
   * Norwegian Bokmal (Hans Fredrik Nordhaug). Closes: #497309
   * Swedish (Daniel Nylander and Peter Krefting).
+  * Vietnamese (Clytie Siddall). Closes: #497893
 
   [ Updated manpages translations ]
   * Swedish (Peter Krefting).
