--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-dpkg (1.14.22) UNRELEASED; urgency=low
+dpkg (1.14.22) unstable; urgency=low
 
   [ Raphael Hertzog ]
   * The last "small fix" actually broke conversion of source packages to
@@ -27,7 +27,7 @@ dpkg (1.14.22) UNRELEASED; urgency=low
   [ Updated scripts translations ]
   * Swedish (Peter Krefting).
 
- -- Guillem Jover <guillem@debian.org>  Tue, 26 Aug 2008 05:51:45 +0300
+ -- Raphael Hertzog <hertzog@debian.org>  Fri, 05 Sep 2008 16:54:45 +0200
 
 dpkg (1.14.21) unstable; urgency=low
 
