--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-09-05  Raphael Hertzog  <hertzog@debian.org>
+
+	* configure.ac: Release 1.14.22.
+
 2008-08-29  Raphael Hertzog  <hertzog@debian.org>
 
 	* scripts/dpkg-gensymbols.pl: It was already skipping symlinks
