--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+dpkg (1.14.23) UNRELEASED; urgency=low
+
+  *
+
+ -- Raphael Hertzog <hertzog@debian.org>  Fri, 05 Sep 2008 17:33:10 +0200
+
 dpkg (1.14.22) unstable; urgency=low
 
   [ Raphael Hertzog ]
