--- a/man/po/sv.po
+++ b/man/po/sv.po
@@ -11,7 +11,7 @@ msgstr ""
 "Language-Team: Swedish <debian-l10n-swedish@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: 8bit"
+"Content-Transfer-Encoding: 8bit\n"
 
 # type: Plain text
 #: ../../man/822-date.1:2
