--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,22 @@
 2008-09-14  Guillem Jover  <guillem@debian.org>
 
+	* lib/dpkg.h: Do not include <myopt.h>.
+	(standard_startup): Do not take argc and argv as arguments, and do
+	not call myopt. Fix all callers.
+	* lib/myopt-util.c: Include <myopt.h>.
+	* dpkg-deb/build.c: Likewise.
+	* dpkg-split/info.c: Likewise.
+	* dpkg-split/join.c: Likewise.
+	* dpkg-split/queue.c: Likewise.
+	* src/select.c: Likewise.
+	* dpkg-deb/main.c (main): Call myopt directly.
+	* dpkg-split/main.c: Likewise.
+	* src/main.c: Likewise.
+	* src/query.c: Likewise.
+	* src/trigcmd.c: Likewise.
+
+2008-09-14  Guillem Jover  <guillem@debian.org>
+
 	* lib/dpkg.h (standard_shutdown): Remove unused freemem argument,
 	and do not call nffreeall. Fix all callers.
 
