dpkg: Remove left over debug printf in --command-fd code

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2008-09-14  Guillem Jover  <guillem@debian.org>
 
+	* src/main.c (commandfd): Remove left over debug printf.
+
+2008-09-14  Guillem Jover  <guillem@debian.org>
+
 	* lib/dpkg.h (IMPORTANTFMT): Remove out of sync comment.
 
 2008-09-14  Guillem Jover  <guillem@debian.org>
