--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2008-09-14  Guillem Jover  <guillem@debian.org>
 
+	* lib/dpkg.h (IMPORTANTFMT): Remove out of sync comment.
+
+2008-09-14  Guillem Jover  <guillem@debian.org>
+
 	* lib/dpkg.h (standard_startup): Do not take prog, loadcfg and
 	cmdinfos as arguments, and do not call loadcfgfile. Fix all callers.
 	* src/main.c: Call loadcfgfile directly.
