libcompat: Change unsetenv to return a status code

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2008-09-14  Guillem Jover  <guillem@debian.org>
 
+	* libcompat/compat.h (unsetenv): Change return type from void to int.
+	* libcompat/unsetenv.c (unsetenv): Likewise. Return -1 on error, or
+	pass through the status code from putenv.
+
+2008-09-14  Guillem Jover  <guillem@debian.org>
+
 	* dselect/methkeys.cc: Remove unused headers <stdio.h>, <string.h>,
 	<assert.h> and <dpkg.h>.
 	* dselect/pkgkeys.cc: Likewise.
