libcompat: Make snprintf use vsnprintf instead of vsprintf

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2008-09-14  Guillem Jover  <guillem@debian.org>
 
+	* libcompat/snprintf.c (snprintf): Use vsnprintf instead of vsprintf.
+
+2008-09-14  Guillem Jover  <guillem@debian.org>
+
 	* libcompat/vsnprintf.c (vsnprintf): Use '\0' instead of NULL to
 	terminate the string.
 
