Updated Greek translation

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 dpkg (1.14.23) UNRELEASED; urgency=low
 
-  *
+  [ Updated dpkg translations ]
+  * Greek (Emmanuel Galatoulas). Closes: #498585
 
  -- Raphael Hertzog <hertzog@debian.org>  Fri, 05 Sep 2008 17:33:10 +0200
 
@@ -79,7 +80,7 @@ dpkg (1.14.21) unstable; urgency=low
   * French (Christian Perrier).
   * German (Sven Joachim).
   * Korean (Changwoo Ryu).
-  * Romanian (Eddy Petrișor).
+  * Romanian (Eddy Petri?or).
   * Russian (Yuri Kozlov). Closes: #488689
   * Simplified Chinese (Deng Xiyue). Closes: #496176
   * Slovak (Ivan Masár). Closes: #488903, #495505
@@ -89,7 +90,7 @@ dpkg (1.14.21) unstable; urgency=low
   * Lithuanian (Gintautas Miliauskas). Closes: #493326
 
   [ Updated dselect translations ]
-  * Romanian (Eddy Petrișor).
+  * Romanian (Eddy Petri?or).
 
  -- Guillem Jover <guillem@debian.org>  Tue, 26 Aug 2008 05:32:39 +0300
 
