--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-09-12  Emmanuel Galatoulas  <galaxico@quad-nrg.net>
+
+	* el.po: Updated to 985t.
+
 2008-09-05  Clytie Siddall  <clytie@riverland.net.au>
 
 	* vi.po: Updated to 985t.
@@ -30,7 +34,7 @@
 
 	* cs.po: Updated to 985t.
 
-2008-08-20  Eddy Petrișor <eddy.petrisor@gmail.com>
+2008-08-20  Eddy Petri?or <eddy.petrisor@gmail.com>
 
 	* ro.po: Updated to 985t.
 
@@ -79,7 +83,7 @@
 
 	* ru.po: Updated to 984t.
 
-2008-06-28  Eddy Petrișor <eddy.petrisor@gmail.com>
+2008-06-28  Eddy Petri?or <eddy.petrisor@gmail.com>
 
 	* ro.po: Updated to 984t.
 
